force-app/main/default/objects/EV_CampaignMemberC__c/EV_CampaignMemberC__c.object-meta.xml
<CustomObject>
    <label>CampaignMember</label>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Identificador Miembro de Campaña</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CampaignMembers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>