force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_AccountWithLead__c.field-meta.xml
<CustomField>
    <fullName>EV_AccountWithLead__c</fullName>
    <description>Empresa del lead</description>
    <formula>EV_LeadId__r.EV_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa del lead</label>
    <type>Text</type>
</CustomField>