force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>EV_CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>