force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_CampaignTechSummit__c.field-meta.xml
<CustomField>
    <fullName>EV_CampaignTechSummit__c</fullName>
    <description>Campo para comprobar si el check del Tech Summit de la Campaña está a true o false.</description>
    <formula>EV_CampaignId__r.EV_TechSummit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Tech Summit</label>
    <type>Checkbox</type>
</CustomField>