force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_CodCompany__c.field-meta.xml
<CustomField>
    <fullName>EV_CodCompany__c</fullName>
    <description>To be used multichannel.</description>
    <label>CodCompany</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CXB</fullName>
                <label>CaixaBank</label>
            </value>
            <value>
                <fullName>ACC</fullName>
                <label>Accionistas</label>
            </value>
            <value>
                <fullName>VCX</fullName>
                <label>VidaCaixa</label>
            </value>
            <value>
                <fullName>IMG</fullName>
                <label>Imagin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>