force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_CodigoQR__c.field-meta.xml
<CustomField>
    <fullName>EV_CodigoQR__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=&apos;&amp; IF(ISPICKVAL(EV_FormatoDeAsistencias__c, &apos;002&apos;), SUBSTITUTE(EV_URLStreamingEvento__c, &apos;&amp;&apos;, &apos;%26&apos;),
SUBSTITUTE(EV_URLStreamingEvento__c&amp;&apos;&amp;asistencia=fisica&apos;, &apos;&amp;&apos;, &apos;%26&apos;)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código QR</label>
    <type>Text</type>
</CustomField>