force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_CompanyOrAccount__c.field-meta.xml
<CustomField>
    <fullName>EV_CompanyOrAccount__c</fullName>
    <formula>IF(!ISBLANK(EV_AccountId__c),EV_AccountId__r.Name, IF(!ISBLANK( EV_ContactId__c),EV_ContactId__r.Account.Name, EV_LeadId__r.FirstName+ &apos; &apos; +  EV_LeadId__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company (Account)</label>
    <type>Text</type>
</CustomField>