force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_ConsentimientoTerceros__c.field-meta.xml
<CustomField>
    <fullName>EV_ConsentimientoTerceros__c</fullName>
    <description>Consentimiento terceros</description>
    <formula>IF(EV_LeadId__c != null , EV_LeadId__r.EV_ConsentimientoTerceros__c , IF(EV_ContactId__c!= null, EV_ContactId__r.EV_ConsentimientoTerceros__c , false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consentimiento terceros</label>
    <type>Checkbox</type>
</CustomField>