force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_ConsentmientoGeneral__c.field-meta.xml
<CustomField>
    <fullName>EV_ConsentmientoGeneral__c</fullName>
    <description>Consentimiento general</description>
    <formula>IF( EV_LeadId__c != null ,  EV_LeadId__r.EV_ConsentimientoGeneral__c , IF( EV_ContactId__c != null, EV_ContactId__r.EV_ConsentimientoGeneral__c , false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consentimiento comercial no cliente</label>
    <type>Checkbox</type>
</CustomField>