force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_ContactId__c.field-meta.xml
<CustomField>
    <fullName>EV_ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>