force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_ContadorCheckInVirtual__c.field-meta.xml
<CustomField>
    <fullName>EV_ContadorCheckInVirtual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador CheckIn virtual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>