force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Country__c.field-meta.xml
<CustomField>
    <fullName>EV_Country__c</fullName>
    <formula>IF(!ISBLANK(EV_AccountId__c),EV_AccountId__r.BillingCountry, IF(!ISBLANK( EV_ContactId__c), EV_ContactId__r.MailingCountry , EV_LeadId__r.Country))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>