force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Description__c.field-meta.xml
<CustomField>
    <fullName>EV_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>