force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Edad__c.field-meta.xml
<CustomField>
    <fullName>EV_Edad__c</fullName>
    <description>Edad</description>
    <formula>IF(!ISBLANK(EV_ContactId__c), EV_ContactId__r.CC_Edad__c, 
  IF(!ISBLANK(EV_AccountId__c),EV_AccountId__r.AV_Age__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>