force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Email__c.field-meta.xml
<CustomField>
    <fullName>EV_Email__c</fullName>
    <description>Email</description>
    <formula>IF(NOT(ISBLANK(EV_ContactId__c)), 
   EV_ContactId__r.Email, 
   EV_LeadId__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>