force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_EmailDeCampana__c.field-meta.xml
<CustomField>
    <fullName>EV_EmailDeCampana__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email de campaña</label>
    <type>Email</type>
</CustomField>