force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Empresa__c.field-meta.xml
<CustomField>
    <fullName>EV_Empresa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Empresa</description>
    <label>Empresa</label>
    <type>Checkbox</type>
</CustomField>