force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Encuesta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>EV_Encuesta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Encuesta enviada</description>
    <label>Encuesta enviada</label>
    <type>Checkbox</type>
</CustomField>