force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Error_Envio__c.field-meta.xml
<CustomField>
    <fullName>EV_Error_Envio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Error envío</description>
    <label>Error envío</label>
    <type>Checkbox</type>
</CustomField>