force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_FormatoDeAsistencias__c.field-meta.xml
<CustomField>
    <fullName>EV_FormatoDeAsistencias__c</fullName>
    <description>Formato de asistencia</description>
    <label>Formato de asistencias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Física</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>