force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_HasResponded__c.field-meta.xml
<CustomField>
    <fullName>EV_HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HasResponded</description>
    <label>HasResponded</label>
    <type>Checkbox</type>
</CustomField>