force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_InvitacionEncuesta__c.field-meta.xml
<CustomField>
    <fullName>EV_InvitacionEncuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitación encuesta</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>