force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_IsTest__c.field-meta.xml
<CustomField>
    <fullName>EV_IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>