force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_LastName__c.field-meta.xml
<CustomField>
    <fullName>EV_LastName__c</fullName>
    <description>LastName</description>
    <formula>IF( !ISBLANK(EV_AccountId__c),EV_AccountId__r.LastName,IF(!ISBLANK( EV_ContactId__c), EV_ContactId__r.LastName,  EV_LeadId__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName</label>
    <type>Text</type>
</CustomField>