force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_LeadId__c.field-meta.xml
<CustomField>
    <fullName>EV_LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>