force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Marketing__c.field-meta.xml
<CustomField>
    <fullName>EV_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing</description>
    <label>Marketing</label>
    <type>Checkbox</type>
</CustomField>