force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>EV_MobilePhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>