force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Movil__c.field-meta.xml
<CustomField>
    <fullName>EV_Movil__c</fullName>
    <formula>IF(NOT(ISBLANK(EV_ContactId__c)),
EV_ContactId__r.MobilePhone,
 EV_LeadId__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Móvil</label>
    <type>Text</type>
</CustomField>