force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Nickname__c.field-meta.xml
<CustomField>
    <fullName>EV_Nickname__c</fullName>
    <description>Nickname</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>