force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_NIFEmpresaLead__c.field-meta.xml
<CustomField>
    <fullName>EV_NIFEmpresaLead__c</fullName>
    <description>NIF</description>
    <formula>EV_LeadId__r.EV_NIFEmpresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIF Empresa Lead</label>
    <type>Text</type>
</CustomField>