force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_NumpersoHASH__c.field-meta.xml
<CustomField>
    <fullName>EV_NumpersoHASH__c</fullName>
    <description>Generado para el uso con SNB</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NumpersoHash</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>