force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>EV_PostalCode__c</fullName>
    <description>Código Postal</description>
    <formula>IF(!ISBLANK(EV_AccountId__c), EV_AccountId__r.ShippingPostalCode ,IF(!ISBLANK(EV_ContactId__c),  EV_ContactId__r.MailingPostalCode  , null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PostalCode</label>
    <type>Text</type>
</CustomField>