force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_QR__c.field-meta.xml
<CustomField>
    <fullName>EV_QR__c</fullName>
    <description>QR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EV_QR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>