force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_QR_Enviado__c.field-meta.xml
<CustomField>
    <fullName>EV_QR_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QR enviado</description>
    <label>QR Enviado</label>
    <type>Checkbox</type>
</CustomField>