force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_QRLog__c.field-meta.xml
<CustomField>
    <fullName>EV_QRLog__c</fullName>
    <description>QR Log</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QR Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>