force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_RTCampaign__c.field-meta.xml
<CustomField>
    <fullName>EV_RTCampaign__c</fullName>
    <description>RT Campaign</description>
    <formula>EV_CampaignId__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RT Campaign</label>
    <type>Text</type>
</CustomField>