force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Sexo__c.field-meta.xml
<CustomField>
    <fullName>EV_Sexo__c</fullName>
    <description>Sexo</description>
    <formula>IF(ISBLANK(EV_ContactId__c),
null,
TEXT(EV_ContactId__r.CC_Sexo__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sexo</label>
    <type>Text</type>
</CustomField>