force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_State__c.field-meta.xml
<CustomField>
    <fullName>EV_State__c</fullName>
    <formula>IF(!ISBLANK(EV_AccountId__c),EV_AccountId__r.BillingState,IF(!ISBLANK(EV_ContactId__c), EV_ContactId__r.MailingState , null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>