force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Status__c.field-meta.xml
<CustomField>
    <fullName>EV_Status__c</fullName>
    <description>Estado</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asistió</fullName>
            </value>
            <value>
                <fullName>Asistió en diferido</fullName>
            </value>
            <value>
                <fullName>Baja del evento</fullName>
            </value>
            <value>
                <fullName>Error envio</fullName>
            </value>
            <value>
                <fullName>Invitación enviada</fullName>
            </value>
            <value>
                <fullName>Invitacion no enviada</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>QR enviado</fullName>
            </value>
            <value>
                <fullName>Registro confirmado</fullName>
            </value>
            <value>
                <fullName>Accedio a la oferta</fullName>
                <label>Accedió a la oferta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>