force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_Street__c.field-meta.xml
<CustomField>
    <fullName>EV_Street__c</fullName>
    <description>Calle</description>
    <formula>IF(!ISBLANK(EV_AccountId__c), EV_AccountId__r.ShippingStreet ,IF(!ISBLANK(EV_ContactId__c),  EV_ContactId__r.MailingStreet , null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>