force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_TelefonoDeCampana__c.field-meta.xml
<CustomField>
    <fullName>EV_TelefonoDeCampana__c</fullName>
    <description>Teléfono de campaña</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono de campaña</label>
    <type>Phone</type>
</CustomField>