force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLEncuesta__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuesta__c</fullName>
    <description>URL encuesta</description>
    <formula>$CustomMetadata.EV_URL_portal__mdt.URLs.urlComunidadEncuestas__c &amp;&apos;/survey/runtimeApp.app?invitationId=&apos;&amp; EV_InvitacionEncuesta__r.Id&amp;&apos;&amp;surveyName=&apos;&amp;EV_CampaignId__r.EV_Encuesta__r.DeveloperName&amp;&apos;&amp;UUID=&apos;&amp;EV_InvitacionEncuesta__r.UUID &amp;&apos;&amp;guestUserLang=&apos; &amp;
IF(ISBLANK(EV_LeadId__c),
IF(ISBLANK(EV_ContactId__c),IF(ISBLANK(EV_AccountId__c),&apos;es&apos;,CASE(EV_AccountId__r.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)), CASE(EV_ContactId__r.Account.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)),
CASE(EV_LeadId__r.EV_Idiomas__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL encuesta</label>
    <type>Text</type>
</CustomField>