force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLEncuestaGuestLang__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaGuestLang__c</fullName>
    <description>Parametro GestUserLang de la encuesta</description>
    <formula>&quot;guestUserLang=&quot;+
IF(ISBLANK(EV_LeadId__c),
IF(ISBLANK(EV_ContactId__c),IF(ISBLANK(EV_AccountId__c),&apos;es&apos;,CASE(EV_AccountId__r.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)), CASE(EV_ContactId__r.Account.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)),
CASE(EV_LeadId__r.EV_Idiomas__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta GuestLang</label>
    <type>Text</type>
</CustomField>