force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLEncuestaInvitationId__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEncuestaInvitationId__c</fullName>
    <description>Parametro invitationId de Encuesta</description>
    <formula>&quot;invitationId=&quot;+EV_InvitacionEncuesta__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Encuesta InvitationId</label>
    <type>Text</type>
</CustomField>