force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLPDFQR__c.field-meta.xml
<CustomField>
    <fullName>EV_URLPDFQR__c</fullName>
    <description>URL del pdf QR recogido de la API.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL PDF QR</label>
    <type>Url</type>
</CustomField>