force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLQRPKPASS__c.field-meta.xml
<CustomField>
    <fullName>EV_URLQRPKPASS__c</fullName>
    <description>URL del QRPKPASS generado a través de la API</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL QRPKPASS</label>
    <type>Url</type>
</CustomField>