force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLVolverBase__c.field-meta.xml
<CustomField>
    <fullName>EV_URLVolverBase__c</fullName>
    <formula>LEFT(EV_URLVolverEvento__c ,FIND(&quot;?&quot;, EV_URLVolverEvento__c )-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Volver Base</label>
    <type>Text</type>
</CustomField>