force-app/main/default/objects/EV_CampaignMemberC__c/fields/EV_URLVolverEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_URLVolverEvento__c</fullName>
    <formula>$CustomMetadata.EV_URL_portal__mdt.URLreturn.urlPortal__c &amp; 
$CustomMetadata.EV_URL_portal__mdt.URLreturn.URL_param_index__c &amp;
IF(ISBLANK( EV_LeadId__c ),
IF(ISBLANK( EV_ContactId__c ),
IF(ISBLANK( EV_AccountId__c ),&apos;es&apos;,CASE(EV_AccountId__r.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)),
CASE(EV_ContactId__r.Account.AV_Idioma__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;)),
CASE(EV_LeadId__r.EV_Idiomas__c, &apos;001&apos;, &apos;ca&apos;, &apos;002&apos;,&apos;es&apos;,&apos;010&apos;,&apos;en&apos;,&apos;es&apos;))
&amp; $CustomMetadata.EV_URL_portal__mdt.URLreturn.URL_param_html__c&amp;&apos;?idEvento=&apos; &amp; EV_CampaignId__r.EV_ExternalID__c &amp;
&apos;&amp;idInvitacion=&apos;&amp; EV_ExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Volver a ver el evento</label>
    <type>Text</type>
</CustomField>