force-app/main/default/objects/EV_CampaignMemberC__c/recordTypes/EV_Eventos.recordType-meta.xml
<RecordType>
    <fullName>EV_Eventos</fullName>
    <active>true</active>
    <description>Recordtype para eventos</description>
    <label>Eventos</label>
</RecordType>