force-app/main/default/objects/EV_CampaignMemberC__c/recordTypes/EV_EventosAccionistas.recordType-meta.xml
<RecordType>
    <fullName>EV_EventosAccionistas</fullName>
    <active>true</active>
    <description>Recordtype para eventos Accionistas</description>
    <label>Eventos Accionistas</label>
</RecordType>