force-app/main/default/objects/EV_CampaignMemberC__c/recordTypes/EV_EventosTechSummit.recordType-meta.xml
<RecordType>
    <fullName>EV_EventosTechSummit</fullName>
    <active>true</active>
    <description>Registros de tipo TechSummit</description>
    <label>Eventos Tech Summit</label>
</RecordType>