force-app/main/default/objects/EV_CampaignMemberC__c/recordTypes/EV_FestivalesYexperiencias.recordType-meta.xml
<RecordType>
    <fullName>EV_FestivalesYexperiencias</fullName>
    <active>true</active>
    <description>Recordtype utilizado para eventos tipo Festivales y otras experiencias</description>
    <label>Festivales y otras experiencias</label>
</RecordType>