force-app/main/default/objects/EV_CampaignMemberC__c/validationRules/AV_ValidateEditCampaignMemberBankTeller.validationRule-meta.xml
<ValidationRule>
    <fullName>AV_ValidateEditCampaignMemberBankTeller</fullName>
    <active>true</active>
    <description>Validación de que no pueda modificar CampaignMember si el usuario tiene el permiso de bank teller.</description>
    <errorConditionFormula>$Permission.AV_BankTeller_Custom</errorConditionFormula>
    <errorMessage>Su usuario no tiene suficientes permisos para modificar este registro.</errorMessage>
</ValidationRule>