force-app/main/default/objects/EV_CampaignMemberC__c/validationRules/EV_RegistroConfirmado.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_RegistroConfirmado</fullName>
    <active>true</active>
    <description>Si un registro esta en &quot;Registro confirmado&quot; no puede pasar a &quot;Invitación enviada&quot;</description>
    <errorConditionFormula>AND(
ISCHANGED(EV_Status__c),
    ISPICKVAL(EV_Status__c, &quot;Invitación enviada&quot;),
    ISPICKVAL(PRIORVALUE(EV_Status__c), &quot;Registro confirmado&quot;),
				AND(
								 !$Permission.CBK_BypassValidationRules,
								 !$Permission.EV_ByPassValidationRules 
				)
)</errorConditionFormula>
    <errorMessage>El registro ya está confirmado, no se puede enviar invitación</errorMessage>
</ValidationRule>